color modificattion and responsive improvement

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/c27edf8188.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,900&display=swap" rel="stylesheet">
@@ -12,7 +14,7 @@
         <aside>
             <div class="image"><img src="photo.jpg" alt="Ma Photo"></img></div>
             <div id="contact">
-                <div class="titre_aside"><h3>contact</h3></div>  
+                <div class="title_aside"><h3>contact</h3></div>  
             <div id="info_contact">    
                 <div class="adresse"><p>Adresse <br />Poitiers, France</p></div>
                 <div class="telephone"><p>Telephone <br />06.63.83.55.84</p></div>
@@ -22,11 +24,11 @@
             </div>
             </div>
             <div id="about">
-                <div class="titre_aside"><h3>a propos de moi</h3></div>
+                <div class="title_aside"><h3>a propos de moi</h3></div>
                 <div class="apropos"><p>Post haec Gallus Hierapolim profecturus ut expeditioni specie tenus adesset, Antiochensi plebi suppliciter obsecranti ut inediae dispelleret metum, quae per multas difficilisque causas adfore iam sperabatur, non ut mos est principibus, quorum diffusa potestas localibus subinde medetur aerumnis, disponi quicquam statuit vel ex provinciis alimenta transferri conterminis, sed consularem Syriae Theophilum prope adstantem ultima metuenti multitudini dedit id adsidue replicando quod invito rectore nullus egere poterit victu.</p></div>
             </div>
             <div id="loisirs">
-                <div class="titre_aside"><h3>loisirs</h3></div>
+                <div class="title_aside"><h3>loisirs</h3></div>
                 <div id="hobbie">
                     <span id="game">
                         <div class="moncercle">
@@ -53,13 +55,13 @@
                 <h2><span id="devel"> Dével</span>oppeur Web</h2>
             </header>
             <section id="formation">
-                <div class="titre_cv">
+                <div class="title_cv">
                     <i class="fas fa-university"></i>
                     <h3>formation</h3>
                 </div>
                 <div class="formation_contenu">
                     <ul class="formation_liste">
-                        <li class="liste_cv">
+                        <li class="list_cv">
                             <div class="date">
                                 <i class="far fa-dot-circle"></i>
                                 <p>2019-2020<br />
@@ -73,7 +75,7 @@
                                       viverra justo, eget pharetra felis massa sit amet lacus.</p>
                             </div>
                         </li>
-                        <li class="liste_cv">
+                        <li class="list_cv">
                             <div class="date">
                                 <i class="fas fa-circle"></i>                     
                                 <p>2000-2010<br />
@@ -91,13 +93,13 @@
                 </div>
             </section>
             <section id="experience">
-                <div class="titre_cv">
+                <div class="title_cv">
                     <i class="fas fa-briefcase"></i>
                     <h3>experience professionelle</h3>
                 </div>
                 <div class="experience_contenu">
                     <ul class="experience_liste">
-                        <li class="liste_cv">
+                        <li class="list_cv">
                             <div class="date">
                                 <i class="far fa-dot-circle"></i>
                                 <p>2015-2019<br />
@@ -111,7 +113,7 @@
                                      viverra justo, eget pharetra felis massa sit amet lacus.</p>
                             </div>        
                         </li>
-                        <li class="liste_cv">
+                        <li class="list_cv">
                             <div class="date">
                                 <i class="fas fa-circle"></i>
                                 <p>2010-2015<br />
@@ -129,7 +131,7 @@
                 </div>
             </section>
             <section id="recommandation">
-                <div class="titre_cv">
+                <div class="title_cv">
                     <i class="fas fa-pencil-alt"></i>
                     <h3>recommandations</h3>
                 </div>
