color readjustment and padding

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <li class="list_cv">
                             <div class="date">
                                 <i class="fas fa-circle"></i>                     
-                                <p>2000-2010<br />
+                                <p>2000-2005<br />
                                   Poitiers</p>
                             </div>
                             <div class="infos">
@@ -117,6 +117,20 @@
                             <div class="date">
                                 <i class="fas fa-circle"></i>
                                 <p>2010-2015<br />
+                                   Poitiers</p>
+                            </div>
+                            <div class="infos">
+                                <h4>gamer inc</h4>
+                                <h5>Chasseur de Trophées</h5>
+                                <p>Lorem ipsum dolor sit amet, consectetut adipiscing elit.<br />
+                                    Fusce eleifend, diam vitae faucibus varius, neque lectus<br />
+                                     viverra justo, eget pharetra felis massa sit amet lacus.</p>
+                            </div>        
+                        </li>
+                        <li class="list_cv">
+                            <div class="date">
+                                <i class="fas fa-circle"></i>
+                                <p>2005-2010<br />
                                    Poitiers</p>
                             </div>
                             <div class="infos">
